--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,81 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div id="container">
+	
+	<header id="cabecalho-principal">
+		<div id="logo-inicio">
+			<h1>INFOINT</h1>
+			<h2>Objeto de Aprendizagem</h2>
+		</div>
+	</header>
+	
+	 <nav>
+    	<ul>
+    		<li class="opcao-1"><a href="#">Início</a></li>
+    		<li class="opcao-2"><a href="#">Viagem no Tempo</a></li>
+    		<li class="opcao-3"><a href="#">Avaliação</a></li>
+    		<li class="opcao-4"><a href="#">Fale Conosco</a></li>
+    		<li class="opcao-5"><a href="#">Sobre</a></li>
+    	</ul>
+    </nav>
+    
+    <section class="conteudo">
+    	
+    	<aside>
+    		
+    	</aside>
+    	
+    	<article>
+    		<header><h2>Bem-Vindo!</h2></header>
+    		<p>Unus conversa hanc norant quia ambitae diremit sublime hanc mutatas solidumque tractu vultus siccis caelum divino 
+    			deerat cepit ne sanctius pro carmen os animal aequalis caelo non quam pondere liquidas aere duae habitandae 
+    			tegit montes facientes</p>
+    	</article>
+    	
+    	<article>
+    		<header><h2>Features</h2></header>
+    		<ul>
+    			<li>
+    				<h3>Titulo 1</h3>
+    				Unus conversa hanc norant quia ambitae diremit sublime hanc mutatas solidumque tractu vultus siccis caelum divino
+    			</li>
+    			<li>
+    				<h3>Titulo 2</h3>
+    				Unus conversa hanc norant quia ambitae diremit sublime hanc mutatas solidumque tractu vultus siccis caelum divino
+    			</li>
+    			<li>
+    				<h3>Titulo 3</h3>
+    				Unus conversa hanc norant quia ambitae diremit sublime hanc mutatas solidumque tractu vultus siccis caelum divino
+    			</li>
+    		</ul>
+    	</article>
+    	
+    </section>
+    
+    <footer>
+		<hr class="linha-1 vermelho" /><hr class="linha-2 laranja" /><hr class="linha-3 verde" /><hr class="linha-4 azul" /><hr class="linha-5 lilas" />
+		<div>
+			<div id="direitos-autorais">
+				<span>© Diego Augusto de Faria Barros, 2012</span>
+				
+			</div>
+			<div id="logos-tecnologias">
+				<div class="logo-open-source">
+					<a href="http://www.opensource.org">
+						<%= image_tag "logos/OSI-logo-100x117.png", :alt => "Open Source Initiative", :title => "Open Source Initiative" %>
+					</a>
+				</div>
+				<div class="logo-html-5">
+					<a href="http://www.w3.org/html/logo/">
+						<img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics-storage.png" alt="HTML5 Powered with CSS3 / Styling, Semantics, and Offline &amp; Storage" title="HTML5 Powered with CSS3 / Styling, Semantics, and Offline &amp; Storage">
+					</a>
+				</div>
+			</div>
+		</div>
+    </footer>
+</div>
+
+
+
+
+
+
+
