--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Infoint</title>
+  <title>INFOINT - Objeto de Aprendizagem de Itrodução à Informática</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Orbitron|Michroma|Monofett|Allerta+Stencil|Gruppo|Ubuntu:400,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
