Adição do campo descrição da tabela caracteres

--- a/app/views/teclado/estudar_teclado.html.erb
+++ b/app/views/teclado/estudar_teclado.html.erb
@@ -1,2 +1,23 @@
-<h1>Teclado#estudar_teclado</h1>
-<p>Find me in app/views/teclado/estudar_teclado.html.erb</p>
+<div id="container-teclado">
+	
+	<div id="teclado">
+		
+		<div id="categoria-teclas-funcao">
+			
+			
+		</div>
+		
+		<div id="categoria-teclas-digitacao">
+			
+		</div>
+		
+		<div id="categoria-teclas-navegacao">
+			
+		</div>
+		
+		<div id="categoria-teclas-numericas">
+			
+		</div>
+			
+	</div>
+</div>
