--- a/app/assets/stylesheets/teclado.css.scss
+++ b/app/assets/stylesheets/teclado.css.scss
@@ -1,3 +1,109 @@
 // Place all the styles related to the Teclado controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+// CATEGORIAS DE TECLAS
+
+#container-teclado {
+  padding: 5px;
+    border: 1px solid black;
+  height: 350px;
+  margin: 0 auto;
+}
+
+#categoria-teclas-funcao {
+  width:1068px;
+  height:50px;
+  padding: 0;
+}
+
+#categoria-teclas-funcao ul li:nth-child(14) a {
+  font-size:7pt;
+}
+
+#categoria-teclas-funcao a {
+  font-size:10pt;
+}
+
+// CATEGORIA Teclas de Digitação
+
+#categoria-teclas-digitacao {
+  width:730px;
+  height: 240px;
+  padding: 4px 0 2px 0;
+  float:left;
+  position:absolute;
+}
+
+// CATEGORIA Teclas de Navegação
+
+#categoria-teclas-navegacao {
+  width:135px;
+  
+  height: 240px;
+  margin-left: 729px;
+  padding: 4px 0 2px 0;
+  
+  float:left;
+  position:absolute;
+}
+
+#categoria-teclas-navegacao a {
+  font-size:10pt;
+}
+
+
+// CATEGORIA Teclado Numérico
+#categoria-teclas-numericas {
+  width:200px;
+  height: 240px;
+  padding: 4px 0 2px 0;
+  float:left;
+  margin-left:868px;
+  position:absolute;
+}
+
+
+#categoria-teclas-numericas ul li:first-child a {
+  font-size:10pt;
+}
+
+
+// TECLADO
+
+
+#teclado {
+  width:1080px;
+  height: 305px;
+  background-color: #d5d9dc;
+  -moz-border-radius-topleft: 7px 21px;
+  -moz-border-radius-topright: 7px 21px;
+  -moz-border-radius-bottomright: 10px;
+  -moz-border-radius-bottomleft: 10px;
+  border-top-left-radius: 7px 21px;
+  border-top-right-radius: 7px 21px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding: 8px 0 0 5px;
+  -webkit-box-shadow:  
+    inset 0 0 8px #bbb,
+    0 1px 0 #aaa,
+    0 4px 0 #bbb,
+    0 10px 30px #ddd;
+  -moz-box-shadow:  
+    inset 0 0 8px #bbb,
+    0 1px 0 #aaa,
+    0 4px 0 #bbb,
+    0 10px 30px #ddd;
+  box-shadow:  
+    inset 0 0 8px #bbb,
+    0 1px 0 #aaa,
+    0 4px 0 #bbb,
+    0 10px 30px #ddd;
+  margin:0 auto;
+  position:relative;
+}
+
+
