--- a/app/assets/stylesheets/teclado.css.scss
+++ b/app/assets/stylesheets/teclado.css.scss
@@ -2,7 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+ul li{
+  display:inline-block;
+}
 
+li { float: left; }
+
+ul ol { list-style-type: none; }
 
 // CATEGORIAS DE TECLAS
 
@@ -104,6 +110,167 @@
     0 10px 30px #ddd;
   margin:0 auto;
   position:relative;
+}
+
+.tecla {
+  display: block;
+  color: #aaa;
+  font-size: 12pt;
+  text-decoration: none;
+  text-align: center;
+  width: 42px;
+  height: 39px;
+  margin: 4px;
+  background: #eff0f2;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border-top: 1px solid #f5f5f5;
+  -webkit-box-shadow: 
+    inset 0 0 25px #e8e8e8,
+    0 1px 0 #c3c3c3,
+    0 2px 0 #c9c9c9,
+    0 2px 3px #333;
+  -moz-box-shadow: 
+    inset 0 0 25px #e8e8e8,
+    0 1px 0 #c3c3c3,
+    0 2px 0 #c9c9c9,
+    0 2px 3px #333;
+  box-shadow: 
+    inset 0 0 25px #e8e8e8,
+    0 1px 0 #c3c3c3,
+    0 2px 0 #c9c9c9,
+    0 2px 3px #333;
+  text-shadow: 0px 1px 0px #f5f5f5;
+  
+  
+}
+
+tecla:active,
+.tecla-abaixada {
+  color: #888;
+  background: #ebeced;
+  margin: 6px 4px 2px;
+  
+  -webkit-box-shadow:
+    inset 0 0 25px #ddd,
+    0 0 3px #333;
+  -moz-box-shadow: 
+    inset 0 0 25px #ddd,
+    0 0 3px #333;
+  box-shadow: 
+    inset 0 0 25px #ddd,
+    0 0 3px #333;
+  border-top: 1px solid #eee;
+}
+
+// Teclas ESPECIAIS
+
+.tecla-de-funcao { 
+  height: 26px; 
+  width: 44px;
+}
+
+
+#tab {
+  width:70px;
+}
+
+#barra-de-espaco {
+  width:336px;
+}
+
+#caps-lock {
+  font-size:11pt;
+  width:80px;
+}
+
+#enter-digitacao {
+  font-size:11pt;
+  width:82px;
+}
+
+#enter-numerico {
+  height:90px;
+  margin-top:-45px;
+  font-size:10pt;
+}
+
+#backspace {
+  font-size:9pt;
+  width:70px;
+}
+
+#tecla-numero-zero {
+  width: 92px;
+}
+
+.shift {
+  font-size:11pt;
+  width:56px;
+}
+
+.alt {
+  font-size:11pt;
+  width:56px;
+}
+
+.ctrl {
+  font-size:11pt;
+  width:56px;
+}
+
+.menu {
+  width:56px;
+}
+
+.windows {
+  width:56px;
+}
+
+#setas {
+  height:75px;
+  margin-top: 165px;
+  padding-left:7px;
+}
+
+#setinha-para-cima {
+  margin-left: 48px;
+}
+
+
+#setinha-direita {
+  margin-left: 5px;
+  position:absolute;
+}
+
+#setinha-para-cima,
+#setinha-para-baixo,
+#setinha-esquerda,
+#setinha-direita {
+  height: 27px;
+  width: 35px;
+}
+
+
+// POSICAO CARACTERE
+
+
+.caractere-superior {
+  font-size:10pt;
+  margin: 0 -15px;
+  position:absolute;
+}
+
+.caractere-esquerdo {
+  font-size:10pt;
+  margin:20px -17px;
+  position:absolute;
+}
+
+.caractere-direito {
+  font-size:10pt;
+  margin:20px 10px;
+  position:absolute;
 }
 
 
