Implementacao da action visualizar tecla

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -214,12 +214,12 @@ article > header {
 }
 
 .conteudo article ul {
-  padding: 10px 10px 5px 10px;
+  padding: 10px 10px 10px 10px;
 
 }
 
 .conteudo article ul li {
-  margin: 15px 15px 25px 15px;
+  margin: 15px 10px;
   text-align:justify;
 }
 
