--- a/app/views/teclado/visualizar_tecla.html.erb
+++ b/app/views/teclado/visualizar_tecla.html.erb
@@ -5,13 +5,12 @@
 		</aside>
 		<article>
 			<header>
-
+				<h3><%= @tecla.nome %></h3>
 			</header>
 			<p></p>
 		</article>
 	</div>
 </div>
-
 
 <div id="container-teclado">
 	
@@ -25,7 +24,7 @@
 						<li>
 							<% if tecla.id != 14 && tecla.id != 15 && tecla.id != 16 then %>
 								
-								<%= link_to teclado_visualizar_tecla_path(tecla), :class => "tecla tecla-de-funcao" do %>
+								<%= link_to teclado_visualizar_tecla_path(tecla.id), :class => "tecla tecla-de-funcao" do %>
 									<%=content_tag(:span, tecla.nome, :id => tecla.id) %>
 								<%end%>
 								
@@ -45,7 +44,6 @@
 				<%end%>
 			</ul>
 		</div>
-		
 		<div id="categoria-teclas-digitacao">
 			
 		</div>
