Implementacao do controller Inicio

--- a/app/assets/stylesheets/teclado.css.scss
+++ b/app/assets/stylesheets/teclado.css.scss
@@ -386,4 +386,13 @@ tecla:active,
   marging-bottom: 20px;
 }
 
+#container-descricao-tecla header {
+   border-bottom: 1px solid #C9C0BB;
+  background:none;
+  color:black;
+  padding:5px 0;
+  marging-bottom: 20px;
+}
+
+#container-descricao-tecla p { padding-top:10px; }
 
