--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
 	
 	 <nav>
     	<ul>
-    		<li class="opcao-1"><a href="#">Início</a></li>
+    		<li class="opcao-1"><%= link_to "Inicio", inicio_index_path %></li>
     		<li class="opcao-2"><a href="#">Viagem no Tempo</a></li>
     		<li class="opcao-3"><a href="#">Avaliação</a></li>
     		<li class="opcao-4"><a href="#">Fale Conosco</a></li>
