--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -1,5 +1,9 @@
-<header>
-	
+<header id="cabecalho">
+	<div id="logo-pequeno">
+		<%= link_to home_index_path do %>
+			<h1>INFOINT</h1>
+		<% end %>
+	</div>
 </header>
 <div id="container">
 	
