--- a/app/views/teclado/index.html.erb
+++ b/app/views/teclado/index.html.erb
@@ -1,2 +1,10 @@
+<header id="cabecalho">
+	<div id="logo-pequeno">
+		<%= link_to inicio_index_path do %>
+			<h1>INFOINT</h1>
+		<% end %>
+	</div>
+</header>
+
 <h1>Teclado#index</h1>
 <p>Find me in app/views/teclado/index.html.erb</p>
