--- a/app/views/teclado/visualizar_tecla.html.erb
+++ b/app/views/teclado/visualizar_tecla.html.erb
@@ -1,3 +1,12 @@
+<header id="cabecalho">
+	<div id="logo-pequeno">
+		<%= link_to teclado_index_path do %>
+			<h1>INFOINT</h1>
+		<% end %>
+	</div>
+</header>
+
+
 <div id="container-descricao-teclado">
 	<div id="painel-descricao-teclado">
 					
