Implementação dos links das paginas

--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -6,5 +6,30 @@
 	</div>
 </header>
 <div id="container">
-	
+	<section>
+		<div id="menu-inicio">
+			<article>
+				<header class="verde"><h2>Hardware</h2></header>
+				<div>
+					<ul>
+						<li><%= link_to "Teclado", teclado_index_path %></li>
+					</ul>
+				</div>
+			</article>
+			
+			<article>
+				<header class="azul"><h2>Software</h2></header>
+				<div>
+					
+				</div>
+			</article>
+			
+			<article>
+				<header class="lilas"><h2>Jogos</h2></header>
+				<div>
+					
+				</div>
+			</article>
+		</div>
+	</section>
 </div>
