--- a/app/views/teclado/estudar_teclado.html.erb
+++ b/app/views/teclado/estudar_teclado.html.erb
@@ -8,12 +8,9 @@
 
 <div id="container-descricao-teclado">
 	<div id="painel-descricao-teclado">
-		<aside>
-			
-		</aside>
 		<article>
-			<header>
-
+			<header class="verde">
+				<h3>Teclado</h3>
 			</header>
 			<p></p>
 		</article>
