--- a/app/views/teclado/visualizar_tecla.html.erb
+++ b/app/views/teclado/visualizar_tecla.html.erb
@@ -1,6 +1,6 @@
 <header id="cabecalho">
 	<div id="logo-pequeno">
-		<%= link_to teclado_index_path do %>
+		<%= link_to teclado_estudar_teclado_path do %>
 			<h1>INFOINT</h1>
 		<% end %>
 	</div>
@@ -10,7 +10,7 @@
 <div id="container-descricao-teclado">
 	<div id="painel-descricao-teclado">
 					
-			<header>
+			<header class="verde">
 				<h3><%= @tecla.nome %></h3>
 			</header>
 		<aside>
