--- a/app/assets/stylesheets/inicio.css.scss
+++ b/app/assets/stylesheets/inicio.css.scss
@@ -31,3 +31,67 @@
   color:#333;
   text-shadow: 1px 1px 1px #FFFFFF;
 }
+
+#menu-inicio {
+  height: 600px;
+  position: relative;
+  margin: 150px auto;
+}
+
+#menu-inicio article {
+  width: 330px;
+  float: left;
+  border: 1px solid #C9C0BB;
+  margin-right: 8px;
+  height: 400px;
+  border-radius: 5px;
+}
+
+#menu-inicio article header {
+  padding: 10px;
+  height: 30px;
+  text-transform: uppercase;
+  text-align:center;
+  color: white;
+}
+
+#menu-inicio article div {
+    border: 1px solid #C9C0BB;
+    padding: 5px;
+    margin: 25px 5px;
+}
+
+
+#container-descricao-conteudo {
+    margin: 150px auto;
+    width: 800px;
+    height: 500px;
+    box-shadow: 0 5px 10px #AAAAAA;
+    border-radius: 15px 15px 5px 5px;
+    border: 1px solid #C9C0BB;    
+}
+
+#container-descricao-conteudo article {
+  border-radius: 10px 10px 5px 5px;
+}
+
+#container-descricao-conteudo article header {
+  padding: 20px;
+  height: 30px;
+  text-transform: uppercase;
+  color: white;
+  border-radius: 10px 10px 0px 0px;
+  
+}
+  
+#container-descricao-conteudo article div {
+    padding: 15px;
+    margin: 20px 10px;
+}
+
+#container-descricao-conteudo ul li h3 {
+    font-family: 'Ubuntu',sans-serif;
+    font-size: 16pt;
+    font-weight: 300;
+  
+}
