--- a/app/views/teclado/index.html.erb
+++ b/app/views/teclado/index.html.erb
@@ -6,5 +6,21 @@
 	</div>
 </header>
 
-<h1>Teclado#index</h1>
-<p>Find me in app/views/teclado/index.html.erb</p>
+<div id="container">
+	<section id="container-descricao-conteudo">
+		<article>
+			<header class="verde"><h2>Teclado</h2></header>
+			<div>
+				<ul>
+					<li>
+						<h3><%= link_to "Estudar Teclado", teclado_estudar_teclado_path %></h3>
+						
+					</li>
+					<li>
+						
+					</li>
+				</ul>
+			</div>
+		</article>
+	</section>
+</div>
