Criacao do controller ControleInterface

--- a/app/assets/stylesheets/inicio.css.scss
+++ b/app/assets/stylesheets/inicio.css.scss
@@ -61,6 +61,11 @@
     margin: 25px 5px;
 }
 
+#menu-inicio ul li h3 {
+    font-family: 'Ubuntu',sans-serif;
+    font-size: 16pt;
+    font-weight: 300;
+}
 
 #container-descricao-conteudo {
     margin: 150px auto;
@@ -93,5 +98,4 @@
     font-family: 'Ubuntu',sans-serif;
     font-size: 16pt;
     font-weight: 300;
-  
 }
