--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -12,7 +12,7 @@
 				<header class="verde"><h2>Hardware</h2></header>
 				<div>
 					<ul>
-						<li><%= link_to "Teclado", teclado_index_path %></li>
+						<li><h3><%= link_to "Teclado", teclado_index_path %></h3></li>
 					</ul>
 				</div>
 			</article>
