integracao do controller com o resto do sistema.

--- a/app/views/controle_interface/index.html.erb
+++ b/app/views/controle_interface/index.html.erb
@@ -1,2 +1,26 @@
-<h1>ControleInterface#index</h1>
-<p>Find me in app/views/controle_interface/index.html.erb</p>
+<header id="cabecalho">
+	<div id="logo-pequeno">
+		<%= link_to inicio_index_path do %>
+			<h1>INFOINT</h1>
+		<% end %>
+	</div>
+</header>
+
+<div id="container">
+	<section id="container-descricao-conteudo">
+		<article>
+			<header class="azul"><h2>Controles de Interfaces</h2></header>
+			<div>
+				<ul>
+					<li>
+						<h3><%= link_to "Estudar Controles de Interfaces", controle_interface_estudar_controle_interface_path %></h3>
+						
+					</li>
+					<li>
+						
+					</li>
+				</ul>
+			</div>
+		</article>
+	</section>
+</div>
