--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -20,7 +20,9 @@
 			<article>
 				<header class="azul"><h2>Software</h2></header>
 				<div>
-					
+					<ul>
+						<li><h3><%= link_to "Controles de Interfaces", controle_interface_index_path %></h3></li>
+					</ul>
 				</div>
 			</article>
 			
