--- a/app/assets/stylesheets/controle_interface.css.scss
+++ b/app/assets/stylesheets/controle_interface.css.scss
@@ -1,3 +1,38 @@
 // Place all the styles related to the ControleInterface controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.container-artigos {
+  margin-top: 100px;
+  height:600px;
+  padding:30px;
+  border-radius: 8px;
+  border-left: 1px solid #DDDDDD;
+  border-right: 1px solid #DDDDDD;
+  background-color:#FFFFFF;
+  box-shadow: 0 5px 10px #AAAAAA;
+  overflow: hidden;
+}
+
+.container-artigos article {
+  margin-bottom: 32px;
+  border: 1px solid #C9C0BB;
+}
+
+.container-artigos article header {
+  border: 1px solid #C9C0BB;
+}
+
+.container-artigos article div {
+  padding: 20px;
+  height: 450px;
+  border: 1px solid #C9C0BB;
+  
+}
+
+.container-artigos article footer {
+  margin:0;
+  box-shadow:none;
+  padding: 10px;
+  height: 30px;
+  border: 1px solid #C9C0BB;
+}
