--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -1,2 +1,36 @@
-<h1>ControleInterface#estudar_controle_interface</h1>
-<p>Find me in app/views/controle_interface/estudar_controle_interface.html.erb</p>
+<header id="cabecalho">
+	<div id="logo-pequeno">
+		<%= link_to controle_interface_index_path do %>
+			<h1>INFOINT</h1>
+		<% end %>
+	</div>
+</header>
+<div id="container">
+	<section class="container-artigos">
+		<article id="ARTIGO-1">
+			<header class="azul">
+				
+			</header>
+			<div>
+				<p>ARTIGO 1</p>
+			</div>
+			<footer>
+				<a href="#ARTIGO-2">artigo 2</a>
+			</footer>
+		</article>
+		
+		<article id="ARTIGO-2">
+			<header class="azul">
+				
+			</header>
+			<div>
+				<p>ARTIGO 2</p>
+			</div>
+			<footer>
+				
+			</footer>
+		</article>
+		
+		
+	</section>
+</div>
