Implementacao dos modelos controleinterface e instrucaouso

--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -7,24 +7,32 @@
 </header>
 <div id="container">
 	<section class="container-artigos">
-		<article id="ARTIGO-1">
+		<article>
 			<header class="azul">
-				
+				<h2>Controles de Interfaces</h2>
 			</header>
 			<div>
-				<p>ARTIGO 1</p>
+				
+				<div class="painel-descricao-padrao-interface ">
+					
+				</div>
+				<div class="painel-descricao-padrao-interface ">
+					
+				</div>
+
 			</div>
 			<footer>
-				<a href="#ARTIGO-2">artigo 2</a>
+				
 			</footer>
+			
 		</article>
 		
-		<article id="ARTIGO-2">
+		<article>
 			<header class="azul">
 				
 			</header>
 			<div>
-				<p>ARTIGO 2</p>
+				
 			</div>
 			<footer>
 				
