--- a/app/assets/stylesheets/controle_interface.css.scss
+++ b/app/assets/stylesheets/controle_interface.css.scss
@@ -26,8 +26,14 @@
   padding: 20px;
   height: 450px;
   border: 1px solid #C9C0BB;
-  
 }
+
+.painel-descricao-padrao-interface {
+  width: 417px;
+  float: left;
+  border: 1px solid #C9C0BB;
+}
+
 
 .container-artigos article footer {
   margin:0;
