--- a/app/views/controle_interface/estudar_controle_interface.html.erb
+++ b/app/views/controle_interface/estudar_controle_interface.html.erb
@@ -7,52 +7,192 @@
 </header>
 <div id="container">
 	<section class="container-artigos">
-		<article>
-			<header class="azul">
-				<h2>Controles de Interfaces - Checkboxes</h2>
-			</header>
-			<div>
+		<div class="moldura">
+			<article id="padrao-checkbox">
+				<header class="azul">
+					<h2>Controles de Interfaces - Checkboxes</h2>
+				</header>
+				<div >
 				
-				<div class="painel-descricao-padrao-interface ">
+					<div class="painel-descricao-padrao-interface ">
+						<div id="demonstracao-controle-interface">
+							<p>Os quadrados abaixo são chamados de <b>Checkboxes</b></p>
+							<ul>
+								<li>
+									<input type="checkbox" checked="true" />
+									<label>Checkbox 1</label>
+								</li>
+								<li>
+									<input type="checkbox"  />
+									<label>Checkbox 2</label>
+								</li>
+								<li>
+									<input type="checkbox"  />
+									<label>Checkbox 3</label>
+								</li>
+							</ul>
+						</div>
 					
-				</div>
-				<div class="painel-descricao-padrao-interface ">
-					<p>Note que:</p>
-					<ol>
-						<% @controles_interfaces.each do |controles| %>
+					</div>
+					<div class="painel-descricao-padrao-interface ">
+						<p>Note que:</p>
+						<ol>
+							<% @controles_interfaces.each do |controles| %>
 							
-							<% if controles.id == 1 %>
+								<% if controles.id == 1 %>
 							
-								<% controles.instrucao_usos.each do |instrucao_uso| %>
-									<%=content_tag(:li, instrucao_uso.instrucao )%>
-								<% end %>
+									<% controles.instrucao_usos.each do |instrucao_uso| %>
+										<%=content_tag(:li, instrucao_uso.instrucao )%>
+									<% end %>
 								
-							<%end%>
+								<%end%>
 							
-						<%end%>
-					</ol>
-				</div>
+							<%end%>
+						</ol>
+					</div>
 
-			</div>
-			<footer>
-				<p>Para ir para a próxma página, marque o Checkbox</p>
-				<a href="#ar">slide1</a>
-			</footer>
+				</div>	
 			
-		</article>
+				<footer>
+					<ul>
+						<li><span>Para ir para a próxma página, marque o Checkbox:</span></li>
+						<li>
+							<input id="checkbox-avancar" type="checkbox" checked="false" />
+							<label>Avançar</label>
+						</li>
+						<li>
+							<a id="botao-avancar-checkbox" href="#padrao-radio-button" class="botao botao-azul">Avançar</a>
+						</li>
+					</ul>
+				</footer>
+			
+			</article>
 		
-		<article id="ar">
-			<header class="azul">
-				
-			</header>
-			<div>
-				
-			</div>
-			<footer>
-				
-			</footer>
-		</article>
+			<!-- Padrão Radio Button -->
 		
 		
+		
+			<article id="padrao-radio-button">
+				<header class="azul">
+					<h2>Controles de Interfaces - Radio Button</h2>
+				</header>
+				<div>
+					
+					<div class="painel-descricao-padrao-interface ">
+						<div id="demonstracao-controle-interface">
+							<p>Os quadrados abaixo são chamados de <b>Radio Buttons</b></p>
+							<ul>
+								<li>
+									<input name="exemplo-radio-button" type="radio" checked="true" />
+									<label>Radio Button 1</label>
+								</li>
+								<li>
+									<input name="exemplo-radio-button" type="radio" />
+									<label>Radio Button 2</label>
+								</li>
+								<li>
+									<input name="exemplo-radio-button" type="radio"  />
+									<label>Radio Button 3</label>
+								</li>
+							</ul>
+						</div>
+					
+					</div>
+					<div class="painel-descricao-padrao-interface ">
+						<p>Note que:</p>
+						<ol>
+							<% @controles_interfaces.each do |controles| %>
+								
+								<% if controles.id == 2 %>
+							
+									<% controles.instrucao_usos.each do |instrucao_uso| %>
+										<%=content_tag(:li, instrucao_uso.instrucao )%>
+									<% end %>
+								
+								<%end%>
+							
+							<%end%>
+						</ol>
+					</div>
+
+				</div>	
+			
+				<footer>
+					<ul>
+						<li><span>Para ir para a próxma página, marque o Radiobutton:</span></li>
+						<li>
+							<input id="radio-button-avancar-sim" name="radio-button-avancar" type="radio" value="Sim" />
+							<label>Sim</label>
+							<input id="radio-button-avancar-nao" name="radio-button-avancar" type="radio" value="Não" checked="true" />
+							<label>Não</label>
+						</li>
+						<li>
+							<a id="botao-avancar-radio-button" href="#padrao-drop-down" class="botao botao-azul">Avançar</a>
+						</li>
+					</ul>
+				</footer>
+			
+			</article>
+		
+			<!-- Padrão Dropdown -->
+				
+			<article id="padrao-drop-down">
+				<header class="azul">
+					<h2>Controles de Interfaces - Dropdown</h2>
+				</header>
+				<div>
+				
+					<div class="painel-descricao-padrao-interface ">
+						<div id="demonstracao-controle-interface">
+							<p>Os quadrados abaixo são chamados de <b>Dropdown</b></p>
+							<ul>
+								<li>
+									<input name="exemplo-radio-button" type="radio" checked="true" />
+									<label>Radio Button 1</label>
+								</li>
+								<li>
+									<input name="exemplo-radio-button" type="radio" />
+									<label>Radio Button 2</label>
+								</li>
+								<li>
+									<input name="exemplo-radio-button" type="radio"  />
+									<label>Radio Button 3</label>
+								</li>
+							</ul>
+						</div>
+					
+					</div>
+					<div class="painel-descricao-padrao-interface ">
+						<p>Note que:</p>
+						<ol>
+							<% @controles_interfaces.each do |controles| %>
+								
+								<% if controles.id == 2 %>
+							
+									<% controles.instrucao_usos.each do |instrucao_uso| %>
+										<%=content_tag(:li, instrucao_uso.instrucao )%>
+									<% end %>
+								
+								<%end%>
+							
+							<%end%>
+						</ol>
+					</div>
+
+				</div>
+			
+				<footer>
+					<ul>
+						<li><span>Para ir para a próxma página, escolha o valor avançar no dropdown:</span></li>
+					
+						<li>
+					
+						</li>
+	
+					</ul>
+				</footer>
+			
+			</article>
+		</div>
 	</section>
 </div>
